Cookoo with picture with some youtube video

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Cookoo by s-gv</title>
+    <title>Cookoo</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,7 +17,7 @@
       <header>
         <h1>Cookoo</h1>
         <p>Pressure cooker whistle counter</p>
-
+        <img src="cookoo.jpg" alt=""></img>
         <p class="view"><a href="https://github.com/s-gv/cookoo">View the Project on GitHub <small>s-gv/cookoo</small></a></p>
 
 
@@ -31,8 +31,10 @@
         <h3>
 <a id="cookoo" class="anchor" href="#cookoo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cookoo</h3>
 
-<p>Cookoo is a small device that reminds you when to turn off the gas for your pressure cooker. Keep it on your pressure cooker and forget about it. Cookoo will tell you when it's done cooking.</p>
-
+<p>Cookoo keeps track of your pressure cooker so you don't have to. Keep it on your cooker and forget about it. Cookoo will tell you when to turn off the gas.</p>
+<p>
+<iframe width="100%" height="315px"src="http://www.youtube.com/embed/zaxs5LcubCw" frameborder="0" allowfullscreen></iframe>
+</p>
 <h3>
 <a id="authors" class="anchor" href="#authors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors</h3>
 
