--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <h3>
 <a id="authors" class="anchor" href="#authors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors</h3>
 
-<p>Sagar Gubbi and Dhruv Saxena.</p>
+<p>Sagar Gubbi (sagar.writeme@gmail.com) and Dhruv Saxena (dhruvrai23@gmail.com).</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/s-gv">s-gv</a></p>
