corrected youtube link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <p>Cookoo keeps track of your pressure cooker so you don't have to. Keep it on your cooker and forget about it. Cookoo will tell you when to turn off the stove.</p>
 <p>
 <div class="vidwrapper"><div class="vidmain">
-<iframe width="100%" height="100%" src="https://www.youtube.com/watch?v=12Ow2FeCl4U" frameborder="0" allowfullscreen></iframe>
+<iframe width="100%" height="100%" src="http://www.youtube.com/embed/12Ow2FeCl4U" frameborder="0" allowfullscreen></iframe>
 </div></div>
 </p>
 <h3>
