New video and images

--- a/index.html
+++ b/index.html
@@ -48,19 +48,27 @@
 <a id="cookoo" class="anchor" href="#cookoo" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is Cookoo?</h3>
 
 <p>Cookoo keeps track of your pressure cooker so you don't have to. Keep it on your cooker and forget about it. Cookoo will tell you when to turn off the stove.</p>
+<p>This hobby project came out of our own need as terrible cooks. We suffered from the problem of having our food burnt in pressure cookers on a regular basis. Talking to other rookie cooks made us realize that this is a common problem, so we tried to solve it by building Cookoo. </p>
 <p>
 <div class="vidwrapper"><div class="vidmain">
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/12Ow2FeCl4U" frameborder="0" allowfullscreen></iframe>
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/fUlSBkm85a4" frameborder="0" allowfullscreen></iframe>
 </div></div>
 </p>
+
+<h3>
+<a id="works" class="anchor" href="#works" aria-hidden="true"><span class="octicon octicon-link"></span></a>Does it help?</h3>
+<p>We built a few prototypes and handed them out. It not only helped inexperienced cooks circumvent their kitchen woes, but also helped save the efforts of many experienced cooks who toil in the kitchen daily. Women in Indian kitchens are engaged in several other activities while cooking. Cookoo reduced the cognitive load of such users, thereby making cooking much more relaxing. Also, from a safety perspective, the device could help avoid accidents that occur due to pressure cooker explosions.</p>
+<p><img src="4.jpg" alt=""></img></p>
+
 <h3>
 <a id="works" class="anchor" href="#works" aria-hidden="true"><span class="octicon octicon-link"></span></a>How does it work?</h3>
-<p>Cookoo monitors the temperature of your cooker. When the cooker whistles, the pressure inside it falls rapidly. This causes a sharp decrease in the temperate, which Cookoo detects. Cookoo alerts you when the cooker has whistled the number of times you had set.</p>
+<p>Cookoo monitors the temperature of your cooker. When the cooker whistles, the pressure inside it falls rapidly. This causes a sharp decrease in temperate, which Cookoo detects. Cookoo alerts you when the cooker has whistled the number of times you had set.</p>
+<p><img src="5.jpg" alt=""></img></p>
 
 <h3>
 <a id="authors" class="anchor" href="#authors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors</h3>
 
-<p>Sagar Gubbi (sagar.writeme@gmail.com) and Dhruv Saxena (dhruvrai23@gmail.com).</p>
+<p>Sagar Gubbi (sagar.writeme@gmail.com) and Dhruv Saxena (dhruv.writeme@gmail.com).</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/s-gv">s-gv</a></p>
