Changed left panel photo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <header>
         <h1>Cookoo</h1>
         <p>Pressure cooker whistle counter</p>
-        <p><img src="cookoo.jpg" alt=""></img></p>
+        <p><img src="3.jpg" alt=""></img></p>
         <p class="view"><a href="https://github.com/s-gv/cookoo">View the Project on GitHub <small>s-gv/cookoo</small></a></p>
 
 
