Lightbox with crushed images

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/lightbox.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <style>
     	.vidwrapper {
@@ -33,7 +34,7 @@
       <header>
         <h1>Cookoo</h1>
         <p>Pressure cooker whistle counter</p>
-        <p><img src="3.jpg" alt=""></img></p>
+        <p><a href="images/3.jpg" data-lightbox="image-cookoo"><img src="images/3_crushed.jpg" alt=""></img></a></p>
         <p class="view"><a href="https://github.com/s-gv/cookoo">View the Project on GitHub <small>s-gv/cookoo</small></a></p>
 
 
@@ -58,12 +59,12 @@
 <h3>
 <a id="works" class="anchor" href="#works" aria-hidden="true"><span class="octicon octicon-link"></span></a>Does it help?</h3>
 <p>We built a few prototypes and handed them out. It not only helped inexperienced cooks circumvent their kitchen woes, but also helped save the efforts of many experienced cooks who toil in the kitchen daily. Women in Indian kitchens are engaged in several other activities while cooking. Cookoo reduced the cognitive load of such users, thereby making cooking much more relaxing. Also, from a safety perspective, the device could help avoid accidents that occur due to pressure cooker explosions.</p>
-<p><img src="4.jpg" alt=""></img></p>
+<p><a href="images/4.jpg" data-lightbox="image-giveout"><img src="images/4_crushed.jpg"></img></a></p>
 
 <h3>
 <a id="works" class="anchor" href="#works" aria-hidden="true"><span class="octicon octicon-link"></span></a>How does it work?</h3>
 <p>Cookoo monitors the temperature of your cooker. When the cooker whistles, the pressure inside it falls rapidly. This causes a sharp decrease in temperate, which Cookoo detects. Cookoo alerts you when the cooker has whistled the number of times you had set.</p>
-<p><img src="5.jpg" alt=""></img></p>
+<p><a href="images/5.jpg" data-lightbox="image-howto"><img src="images/5_crushed.jpg" alt=""></img></a></p>
 
 <h3>
 <a id="authors" class="anchor" href="#authors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors</h3>
@@ -76,6 +77,7 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
+    <script src="javascripts/lightbox-plus-jquery.min.js"></script>
     
   </body>
 </html>
