--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h3>
 <a id="cookoo" class="anchor" href="#cookoo" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is Cookoo?</h3>
 
-<p>Cookoo keeps track of your pressure cooker so you don't have to. Keep it on your cooker and forget about it. Cookoo will tell you when to turn off the stove.</p>
+<p>Cookoo is a whistle counter for pressure cookers. It keeps track of your pressure cooker so you don't have to. Keep it on your cooker and forget about it. Cookoo will tell you when to turn off the stove.</p>
 <p>This hobby project came out of our own need as terrible cooks. We suffered from the problem of having our food burnt in pressure cookers on a regular basis. Talking to other rookie cooks made us realize that this is a common problem, so we tried to solve it by building Cookoo. </p>
 <p>
 <div class="vidwrapper"><div class="vidmain">
